# MXN441_Group_Assignment

./: .gitignore  bryce_models.py  bryce_visualizations.py  data_download.py  main.py  model_fitting.py  paper_model_fitting.py  preprocessing.py  pyproject.toml  readme.md
data/: .gitignore  readme.md
