[project]
name = "mxn441-group-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasetsforecast>=1.0.0",
    "hierarchicalforecast>=1.5.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "nixtla>=0.7.2",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "optuna-integration[pytorch-lightning]>=4.8.0",
    "pandas>=3.0.2",
    "pytorch-forecasting>=1.7.0",
    "pytorch-optimizer>=3.10.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "statsmodels>=0.14.6",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
